--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               value=""
             />
               <a class="text-white text-sm font-medium leading-normal" href="sol.html">Solutions</a>
-              <a class="text-white text-sm font-medium leading-normal" href="industries.html">Industries</a>
+              <a class="text-white text-sm font-medium leading-normal" href="industries.html">FACE SCAN</a>
               <a class="text-white text-sm font-medium leading-normal" href="product.html">Product</a>
               <a class="text-white text-sm font-medium leading-normal" href="about.html">About</a>
             </div>
