--- a/profile.html
+++ b/profile.html
@@ -1,58 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Profile</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Signup Page with Face Scan</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+        }
+
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 1em 0;
+            text-align: center;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 2em auto;
+            padding: 1em;
+            background-color: white;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+        }
+
+        h2 {
+            text-align: center;
+            color: #333;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+
+        label {
+            margin: 0.5em 0 0.2em;
+            color: #555;
+        }
+
+        input[type="text"],
+        input[type="email"],
+        input[type="password"],
+        button {
+            padding: 0.8em;
+            margin-bottom: 1em;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 1em;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        #faceScanSection {
+            text-align: center;
+            margin-bottom: 1em;
+        }
+
+        #cameraView {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: #eaeaea;
+            height: 150px;
+            border-radius: 8px;
+            overflow: hidden;
+            margin-bottom: 1em;
+            border: 2px solid #ddd;
+        }
+
+        video {
+            width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
-<body class="min-h-screen bg-gray-100 font-sans">
-  <header class="bg-blue-600 text-white py-4">
-    <div class="container mx-auto flex justify-between items-center px-6">
-      <h1 class="text-2xl font-bold">User Profile</h1>
-      <button class="bg-blue-700 px-4 py-2 rounded hover:bg-blue-800">Log Out</button>
+<body>
+    <header>
+        <h1>Signup Page</h1>
+    </header>
+
+    <div class="container">
+        <div id="faceScanSection">
+            <h2>Face Scan</h2>
+            <div id="cameraView">
+                <video id="cameraFeed" autoplay></video>
+            </div>
+            <button id="startButton">Start Camera</button>
+            <button id="captureButton" style="display: none;">Capture Face</button>
+            <canvas id="captureCanvas" style="display: none;"></canvas>
+        </div>
+
+        <form id="signupForm">
+            <h2>Signup</h2>
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" required>
+
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required>
+
+            <button type="submit">Signup</button>
+        </form>
     </div>
-  </header>
 
-  <main class="container mx-auto mt-10 px-6">
-    <div class="bg-white shadow-lg rounded-lg p-6 max-w-lg mx-auto">
-      <h2 class="text-xl font-bold text-gray-700 mb-4">Profile Information</h2>
-      
-      <form class="space-y-6">
-        <!-- Name -->
-        <div>
-          <label for="name" class="block text-gray-700 font-medium mb-2">Name</label>
-          <input type="text" id="name" placeholder="John Doe" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
-        </div>
+    <script>
+        const startButton = document.getElementById('startButton');
+        const captureButton = document.getElementById('captureButton');
+        const cameraFeed = document.getElementById('cameraFeed');
+        const cameraView = document.getElementById('cameraView');
+        const captureCanvas = document.getElementById('captureCanvas');
+        let cameraStream;
 
-        <!-- Phone -->
-        <div>
-          <label for="phone" class="block text-gray-700 font-medium mb-2">Phone</label>
-          <input type="tel" id="phone" placeholder="(123) 456-7890" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
-        </div>
+        // Start camera
+        startButton.addEventListener('click', async () => {
+            try {
+                cameraStream = await navigator.mediaDevices.getUserMedia({ video: true });
+                cameraFeed.srcObject = cameraStream;
+                captureButton.style.display = 'inline-block';
+                startButton.style.display = 'none';
+            } catch (error) {
+                alert('Error accessing camera: ' + error.message);
+            }
+        });
 
-        <!-- Address -->
-        <div>
-          <label for="address" class="block text-gray-700 font-medium mb-2">Address</label>
-          <textarea id="address" placeholder="123 Main Street, City, State, ZIP" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" rows="3" required></textarea>
-        </div>
+        // Capture face image
+        captureButton.addEventListener('click', () => {
+            const canvasContext = captureCanvas.getContext('2d');
+            canvasContext.drawImage(cameraFeed, 0, 0, captureCanvas.width, captureCanvas.height);
 
-        <!-- Product ID -->
-        <div>
-          <label for="product-id" class="block text-gray-700 font-medium mb-2">Product ID</label>
-          <input type="text" id="product-id" placeholder="ABC123456" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
-        </div>
+            // This is where you can send the captured image to the backend
+            captureCanvas.toBlob((blob) => {
+                const formData = new FormData();
+                formData.append('image', blob, 'capturedImage.jpg');
 
-        <!-- Submit Button -->
-        <div class="flex justify-end">
-          <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">Save Changes</button>
-        </div>
-      </form>
-    </div>
-  </main>
-
-  <footer class="mt-10 py-4 bg-gray-200 text-center text-gray-600">
-    © 2025 Your Company. All rights reserved.
-  </footer>
+                fetch('/upload-face', {
+                    method: 'POST',
+                    body: formData,
+                }).then(response => {
+                    if (response.ok) {
+                        alert('Face data saved successfully.');
+                    } else {
+                        alert('Error saving face data.');
+                    }
+                }).catch(error => {
+                    alert('Error during image upload: ' + error.message);
+                });
+            }, 'image/jpeg');
+        });
+    </script>
 </body>
 </html>
