--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
   onclick="window.location.href='profile.html';"
   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 bg-[#2c90e2] text-white text-sm font-bold leading-normal tracking-[0.015em]"
 >
-  <span>profile</span>
+  <span>signup
+  </span>
 </button>
           </div>
         </header>
