--- a/index.html
+++ b/index.html
@@ -380,6 +380,10 @@
       </div>
   </footer>
 
+
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3796596339470941"
+     crossorigin="anonymous"></script>
+
           </div>
         </div>
       </div>
